[gd_scene load_steps=12 format=3 uid="uid://cfkkvhx88wb77"]

[ext_resource type="PackedScene" uid="uid://c8l60rnugru40" path="res://addons/godot-xr-tools/objects/pickable.tscn" id="1_tr4cj"]
[ext_resource type="Script" uid="uid://brntuttfd2qg0" path="res://Objects/wand.gd" id="2_g3236"]
[ext_resource type="PackedScene" uid="uid://smmhje56kwx8" path="res://Assets/magic_wand.glb" id="2_lgwuo"]
[ext_resource type="PackedScene" uid="uid://b4b4mlq7yv7sx" path="res://Objects/projectile.tscn" id="3_m5v2f"]
[ext_resource type="Script" uid="uid://da3qnqmlfr31a" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand.gd" id="3_uu67p"]
[ext_resource type="Animation" uid="uid://nq3xh1olqipq" path="res://addons/godot-xr-tools/hands/animations/left/Grip Shaft.res" id="4_hkmbt"]
[ext_resource type="Script" uid="uid://8mtibjvivblb" path="res://addons/godot-xr-tools/hands/poses/hand_pose_settings.gd" id="5_1mdbl"]
[ext_resource type="Animation" uid="uid://c8dghcftg1thx" path="res://addons/godot-xr-tools/hands/animations/right/Grip Shaft.res" id="6_rmjjk"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_uu67p"]

[sub_resource type="Resource" id="Resource_lc4jr"]
script = ExtResource("5_1mdbl")
closed_pose = ExtResource("4_hkmbt")
metadata/_custom_type_script = "uid://8mtibjvivblb"

[sub_resource type="Resource" id="Resource_8deh4"]
script = ExtResource("5_1mdbl")
closed_pose = ExtResource("6_rmjjk")
metadata/_custom_type_script = "uid://8mtibjvivblb"

[node name="Wand" instance=ExtResource("1_tr4cj")]
script = ExtResource("2_g3236")
projectile = ExtResource("3_m5v2f")
projectile_speed = 10.0

[node name="CollisionShape3D" parent="." index="0"]
transform = Transform3D(0.0281883, 0, 0, 0, -1.3266e-08, 0.0330293, 0, -0.30349, -1.44376e-09, 0, 0, 0.123458)
shape = SubResource("CylinderShape3D_uu67p")

[node name="Sketchfab_Scene" parent="." index="1" instance=ExtResource("2_lgwuo")]
transform = Transform3D(-8.23791e-05, 0, -0.00999966, 0, 0.01, 0, 0.00999966, 0, -8.23791e-05, 0, 0, 0)

[node name="XRToolsGrabPointLeftHand" type="Marker3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0102447, 0.0254259, 0.261746)
visible = false
script = ExtResource("3_uu67p")
hand_pose = SubResource("Resource_lc4jr")
metadata/_custom_type_script = "uid://da3qnqmlfr31a"

[node name="XRToolsGrabPointRightHand2" type="Marker3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0107939, 0.037288, 0.277354)
visible = false
script = ExtResource("3_uu67p")
hand = 1
hand_pose = SubResource("Resource_8deh4")
metadata/_custom_type_script = "uid://da3qnqmlfr31a"

[node name="Cooldown" type="Timer" parent="." index="4"]
wait_time = 0.3
one_shot = true

[node name="SpawnPoint" type="Marker3D" parent="." index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000313738, 0.00691743, -0.244675)

[connection signal="dropped" from="." to="." method="_on_dropped"]
[connection signal="picked_up" from="." to="." method="_on_picked_up"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
